# gtk4styler

./: .gitignore  Readme.md  dk.rasmil.Gtk4Styler.json  dk.rasmil.Gtk4Styler.yml  meson.build
data/: dk.rasmil.Gtk4Styler.appdata.xml.in  dk.rasmil.Gtk4Styler.desktop.in  dk.rasmil.Gtk4Styler.gschema.xml  gtk4styler.gresource.xml  meson.build
data/css/: main.css
data/icons/: meson.build
data/ui/: mainmenu.ui  shortcuts.ui  test.ui  test.ui~  window.ui
po/: POTFILES  meson.build
src/: gtk4styler.in  main.py  meson.build  window.py
